# tauri-nae

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tauri-plugin-iosFS/: Cargo.toml  README.md
tauri-plugin-iosFS/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-iosFS/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-iosFS/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-iosFS/ios/: Package.swift  README.md
tauri-plugin-iosFS/ios/Sources/: ExamplePlugin.swift
tauri-plugin-iosFS/permissions/autogenerated/: reference.md
tauri-plugin-iosFS/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
