[package]
name = "tauri-plugin-ios-fs"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.85.1"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-fs"

[dependencies]
tauri = { version = "2", features = [] }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
